--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div class="boxs">Style me via the external method!</div>
+    <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color:orange; font-size: 18px;">Inline Method</button>
   </body>
